fix spacing

--- a/src/app/pages/loading-waiting-states/skeleton-loader/components/placeholder-list/placeholder-list.component.scss
+++ b/src/app/pages/loading-waiting-states/skeleton-loader/components/placeholder-list/placeholder-list.component.scss
@@ -30,9 +30,11 @@
                 }
             }
             .icon-section {
-                max-width: 50px;
-                justify-content: center;
                 color: map-get($pxb-gray, 200);
+                max-width: 56px;
+                justify-content: center;
+                padding: 0 16px;
+                align-items: center;
             }
             .mat-divider {
                 position: relative;
